[gd_scene load_steps=17 format=2]

[ext_resource path="res://Textures/Bosses/Eye/Eye_tentacle_movings.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bosses/Eye/Eye_Tentacle.gd" type="Script" id=2]
[ext_resource path="res://Textures/Bosses/Eye/Eye_tentacle_particles1.png" type="Texture" id=3]
[ext_resource path="res://Textures/Bosses/Eye/Eye_tentacle_particles2.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.00001
height = 8.00001

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16 )

[sub_resource type="Animation" id=3]
resource_name = "dead"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bullet_Detect/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurth_Area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dead_Particles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dead_Particles1:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Dead_Particles2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bullet_Detect/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurth_Area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bullet_Detect/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurth_Area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.00632911, 0.0759494, 0.753165, 0.835443, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.967337, 0.00382229, 0.00382229, 1, 0.631373, 0.0431373, 0.0431373, 1, 0.631373, 0.0431373, 0.0431373, 1, 0.227451, 0, 0, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 700.0
initial_velocity_random = 0.36
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -1.0
linear_accel_random = 1.0
damping = 1900.0
scale = 6.0
scale_random = 0.54
color_ramp = SubResource( 7 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.594937, 1 )
colors = PoolColorArray( 0.631373, 0.0431373, 0.0431373, 1, 0.631373, 0.0431373, 0.0431373, 1, 0.227451, 0, 0, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 450.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -1.0
linear_accel_random = 1.0
damping = 1900.0
angle = -140.0
angle_random = 0.46
scale = 3.0
color_ramp = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -1.0
linear_accel_random = 1.0
damping = 1900.0
angle = -140.0
angle_random = 0.46
scale = 3.0
color_ramp = SubResource( 10 )

[node name="Eye_Tentacle" type="Node2D"]
script = ExtResource( 2 )

[node name="Hurth_Area" type="Area2D" parent="." groups=[
"Damage",
"Enemy_bullet",
]]
position = Vector2( 0, 9 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurth_Area"]
rotation = 1.57079
shape = SubResource( 1 )
disabled = true

[node name="Bullet_Detect" type="Area2D" parent="." groups=[
"Tentacle",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet_Detect"]
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 3 )
anims/moving = SubResource( 4 )
anims/ready = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
hframes = 16
frame = 7

[node name="Dead_Particles" type="Particles2D" parent="."]
z_index = -3
emitting = false
amount = 15
lifetime = 2.0
one_shot = true
explosiveness = 0.97
process_material = SubResource( 8 )

[node name="Dead_Particles1" type="Particles2D" parent="."]
z_index = -3
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
explosiveness = 0.97
process_material = SubResource( 11 )
texture = ExtResource( 3 )

[node name="Dead_Particles2" type="Particles2D" parent="."]
z_index = -3
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
explosiveness = 0.97
process_material = SubResource( 12 )
texture = ExtResource( 4 )

[node name="DieTimer" type="Timer" parent="."]
wait_time = 2.5
[connection signal="area_entered" from="Bullet_Detect" to="." method="_on_Bullet_Detect_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
